--- a/static/css/flat-ui.css
+++ b/static/css/flat-ui.css
@@ -5817,6 +5817,9 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 .palette-clouds {
   color: #bdc3c7;
 }
+.palette-night-dark {
+    background-color: #2c3e50;
+}
 .palette-paragraph {
   color: #7f8c8d;
   font-size: 12px;
